--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "extern/c4core"]
 	path = ext/c4core
 	url = https://github.com/biojppm/c4core
+[submodule "ext/c4core"]
+	url = https://github.com/mlondono74/c4core
